@@ -1,0 +1,2 @@
+[block_assignment]
+section_id = section:section_id
